--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "@mui/styled-engine-sc": "^5.0.3",
+    "dotenv": "^10.0.0",
     "react-bootstrap": "^1.6.4",
     "styled-components": "^5.3.1"
   }
