--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/dom": "^7.21.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.4.0",
@@ -19,7 +19,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "styled-components": "^5.3.1",
+    "typescript": "^4.4.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
