Specifying engine version in package.json

--- a/client/package.json
+++ b/client/package.json
@@ -53,5 +53,8 @@
   "devDependencies": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  }
 }
