--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "- The historian is an app that takes you back in time to shift across time periods and learn about their most significant events and conflicts that shaped our modern life. - This application will host and describe various conflicts that occured during the 20th. We hope to inform later generations of little-known wars. In addition, this application will allow user/survivor/veteran input to help \"narrate\" the timeline.",
   "main": "server/server.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "node server/server.js",
     "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
