--- a/client/package.json
+++ b/client/package.json
@@ -50,11 +50,11 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "engines": {
     "node": "16.x"
-  }
+  },
+  "devDependencies": {}
 }
